# ufos-hunt

./: .gitignore  README.MD  pyproject.toml  ufos_hunt.ipynb
ovnis_crawler/ovnis_crawler/spiders/: ovnis_spyder.py
